syntax = "proto3";

package project.grpc;

option java_multiple_files = true;
option java_package = "project.grpc";
option java_outer_classname = "DatastoreProto";

service DatastoreService {
  rpc WriteOutput (WriteOutputRequest) returns (WriteOutputResponse);
}

message WriteOutputRequest {
  repeated string outputs = 1;
}

message WriteOutputResponse {
  bool success = 1;
  string message = 2;
}